<resources>
    <string name="app_name">My Wants</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My Wants</string>
    <string name="nav_header_subtitle">An APP that makes a Difference</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">My Wants</string>
    <string name="home_menu">Home</string>
    <string name="menu_wants">My Wants</string>
    <string name="menu_alarm">Alarm</string>
    <string name="menu_dream">Dreamboard</string>
    <string name="menu_book">Book</string>


    <string name="home_second">Home Second</string>
    <string name="title_activity_book">book</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_intro">introActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ring">ringActivity</string>
    <string name="for_book_page">For Book page</string>
    <string name="tab_item_dont_want">Don\'t Want</string>
    <string name="tab_item_want">Want</string>

    <string name="activity_login"><a href="http://10.0.2.2:8080/myWant/Registration.html">Click here to register an account</a></string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="menu_login">Login</string>
</resources>
