<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home_menu" />
        <item
            android:id="@+id/nav_alarm"
            android:icon="@drawable/ic_access_alarm_black_24dp"
            android:title="@string/menu_alarm" />
        <item
            android:id="@+id/nav_wants"
            android:icon="@drawable/ic_format_list_numbered_black_24dp"
            android:title="@string/menu_wants" />
        <item
            android:id="@+id/nav_dream"
            android:icon="@drawable/ic_menu_dream_24dp"
            android:title="@string/menu_dream" />

        <item
            android:id="@+id/bookFragment"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/menu_book" />

    </group>
</menu>
