<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.projectlayout.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.projectlayout.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_alarm"
        android:name="com.example.projectlayout.ui.Alarm.AlarmFragment"
        android:label="@string/menu_alarm"
        tools:layout="@layout/fragment_alarm" />
    <fragment
        android:id="@+id/nav_dream"
        android:name="com.example.projectlayout.ui.dream.DreamFragment"
        android:label="@string/menu_dream"
        tools:layout="@layout/fragment_dream" />

    <fragment
        android:id="@+id/nav_wants"
        android:name="com.example.projectlayout.ui.Wants.WantsFragment"
        android:label="@string/menu_wants"
        tools:layout="@layout/fragment_wants" />


</navigation>